kubernetes/task-official-k8s/custom-dns-used-pod.yaml
apiVersion: v1

kind: Pod

metadata:

  namespace: default

  name: dns-example

spec:

  containers:

    - name: test

      image: nginx

  dnsPolicy: "None"

  dnsConfig:

    nameservers:

      - 1.2.3.4

    searches:

      - ns1.svc.cluster-domain.example

      - my.dns.search.suffix

    options:

      - name: ndots

        value: "2"

      - name: edns0
