kubernetes/task-official-k8s/dns-horizontal-scaling.yaml

apiVersion: apps/v1

kind: Deployment

metadata:

  name: kube-dns-autoscaler

  namespace: kube-system

  labels:

    k8s-app: kube-dns-autoscaler

    kubernetes.io/cluster-service: "true"

spec:

  selector:

    matchLabels:

      k8s-app: kube-dns-autoscaler

  template:

    metadata:

      labels:

        k8s-app: kube-dns-autoscaler

    spec:

      priorityClassName: system-cluster-critical

      securityContext:

        seccompProfile:

          type: RuntimeDefault

        supplementalGroups: [ 65534 ]

        fsGroup: 65534

      nodeSelector:

        kubernetes.io/os: linux

      containers:

      - name: autoscaler

        image: k8s.gcr.io/cpa/cluster-proportional-autoscaler:1.8.4

        resources:

            requests:

                cpu: "20m"

                memory: "10Mi"

        command:

          - /cluster-proportional-autoscaler

          - --namespace=kube-system

          - --configmap=kube-dns-autoscaler

          # Should keep target in sync with cluster/addons/dns/kube-dns.yaml.base

          - --target=deployment/coredns

          # When cluster is using large nodes(with more cores), "coresPerReplica" should dominate.

          # If using small nodes, "nodesPerReplica" should dominate.

          - --default-params={"linear":{"coresPerReplica":256,"nodesPerReplica":16,"preventSinglePointFailure":true,"includeUnschedulableNodes":true}}

          - --logtostderr=true

          - --v=2

      tolerations:

      - key: "CriticalAddonsOnly"

        operator: "Exists"

      serviceAccountName: kube-dns-autoscaler
