kubernetes/task-official-k8s/hostAlias-pod.yaml
################ Adding entries to Pod /etc/hosts with HostAliases.

apiVersion: v1

kind: Pod

metadata:

  name: hostaliases-pod

spec:

  restartPolicy: Never

  hostAliases:

  - ip: "127.0.0.1"

    hostnames:

    - "foo.local"

    - "bar.local"

  - ip: "10.1.2.3"

    hostnames:

    - "foo.remote"

    - "bar.remote"

  containers:

  - name: cat-hosts

    image: busybox:1.28

    command:

    - cat

    args:

    - "/etc/hosts"


############# The kubelet manages the hosts file for each container of the Pod to prevent the container runtime from modifying the file after the containers have already been started. Historically, Kubernetes always used Docker Engine as its container runtime, and Docker Engine would then modify the /etc/hosts file after each container had started.
############# Current Kubernetes can use a variety of container runtimes; even so, the kubelet manages the hosts file within each container so that the outcome is as intended regardless of which container runtime you use.
############# Avoid making manual changes to the hosts file inside a container.If you make manual changes to the hosts file, those changes are lost when the container exits.
