kubernetes/task-official-k8s/pod-info-container-env-vars.yaml
################# you create a Pod that has one container, and you project Pod-level fields into the running container as environment variables.
#---
# apiVersion: v1

# kind: Pod

# metadata:

#   name: dapi-envars-fieldref

# spec:

#   containers:

#     - name: test-container

#       image: k8s.gcr.io/busybox

#       command: [ "sh", "-c"]

#       args:

#       - while true; do

#           echo -en '\n';

#           printenv MY_NODE_NAME MY_POD_NAME MY_POD_NAMESPACE;

#           printenv MY_POD_IP MY_POD_SERVICE_ACCOUNT;

#           sleep 10;

#         done;

#       env:

#         - name: MY_NODE_NAME

#           valueFrom:

#             fieldRef:

#               fieldPath: spec.nodeName

#         - name: MY_POD_NAME

#           valueFrom:

#             fieldRef:

#               fieldPath: metadata.name

#         - name: MY_POD_NAMESPACE

#           valueFrom:

#             fieldRef:

#               fieldPath: metadata.namespace

#         - name: MY_POD_IP

#           valueFrom:

#             fieldRef:

#               fieldPath: status.podIP

#         - name: MY_POD_SERVICE_ACCOUNT

#           valueFrom:

#             fieldRef:

#               fieldPath: spec.serviceAccountName

#   restartPolicy: Never

###########  to pass fields that are part of the Pod definition, but taken from the specific container rather than from the Pod overall.

---
apiVersion: v1

kind: Pod

metadata:

  name: dapi-envars-resourcefieldref

spec:

  containers:

    - name: test-container

      image: k8s.gcr.io/busybox:1.24

      command: [ "sh", "-c"]

      args:

      - while true; do

          echo -en '\n';

          printenv MY_CPU_REQUEST MY_CPU_LIMIT;

          printenv MY_MEM_REQUEST MY_MEM_LIMIT;

          sleep 10;

        done;

      resources:

        requests:

          memory: "32Mi"

          cpu: "125m"

        limits:

          memory: "64Mi"

          cpu: "250m"

  restartPolicy: Never
