kubernetes/task-official-k8s/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: web
  # ingress: []
  policyTypes:
  - Ingress
  - Egress
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: access-nginx
# spec:
#   podSelector:
#     matchLabels:
#       app: nginx
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           access: "true"
